# flappy-penguin

./: .gitignore  CMakeLists.txt  README.md  example.frag  main.cpp
assets/shaders/: example.frag  example.vert
include/: loadShaders.h
src/: loadShaders.cpp  main.cpp
